Add arpad as developer
git-svn-id: https://svn.php.net/repository/pear/packages/PHP_Compat/trunk@203898 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,12 @@
             <email>aidan@php.net</email>
             <role>lead</role>
         </maintainer>
+        <maintainer>
+            <user>arpad</user>
+            <name>Arpad Ray</name>
+            <email>arpad@php.net</email>
+            <role>developer</role>
+        </maintainer>
     </maintainers>
 
     <release>
