--- a/package.xml
+++ b/package.xml
@@ -331,7 +331,8 @@
 
          Added new Environment module
          * register_globals
-         * magic_quotes_gpc
+	 * magic_quotes_gpc
+	 * magic_quotes_sybase
          * register_argc_argv
          * register_long_arrays
 
